--- a/package.json
+++ b/package.json
@@ -19,8 +19,24 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@ng-icons/core": "^25.1.0",
+    "@ng-icons/lucide": "^26.3.0",
+    "@spartan-ng/ui-alertdialog-brain": "0.0.1-alpha.356",
     "@spartan-ng/ui-core": "^0.0.1-alpha.356",
+    "@spartan-ng/ui-dialog-brain": "0.0.1-alpha.356",
+    "@spartan-ng/ui-formfield-brain": "0.0.1-alpha.356",
+    "@spartan-ng/ui-forms-brain": "0.0.1-alpha.356",
+    "@spartan-ng/ui-label-brain": "0.0.1-alpha.356",
+    "@spartan-ng/ui-menu-brain": "0.0.1-alpha.356",
+    "@spartan-ng/ui-select-brain": "0.0.1-alpha.356",
+    "@spartan-ng/ui-switch-brain": "0.0.1-alpha.356",
+    "@spartan-ng/ui-toggle-brain": "0.0.1-alpha.356",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^2.1.1",
+    "embla-carousel-angular": "^14.0.0",
     "rxjs": "~7.8.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -30,13 +46,18 @@
     "@angular/compiler-cli": "^18.2.0",
     "@spartan-ng/cli": "^0.0.1-alpha.366",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "~5.5.2"
   }
 }
