--- a/angular.json
+++ b/angular.json
@@ -59,7 +59,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -71,7 +77,7 @@
               "buildTarget": "aldi-books:build:production"
             },
             "development": {
-              "buildTarget": "aldi-books:build:development"
+              "buildTarget": "aldi-books:build:development",
             }
           },
           "defaultConfiguration": "development"
