--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@spartan-ng/ui-label-brain": "0.0.1-alpha.356",
     "@spartan-ng/ui-menu-brain": "0.0.1-alpha.356",
     "@spartan-ng/ui-select-brain": "0.0.1-alpha.356",
+    "@spartan-ng/ui-separator-brain": "0.0.1-alpha.356",
     "@spartan-ng/ui-switch-brain": "0.0.1-alpha.356",
     "@spartan-ng/ui-toggle-brain": "0.0.1-alpha.356",
     "class-variance-authority": "^0.6.0",
